--- a/code/build.gradle
+++ b/code/build.gradle
@@ -16,8 +16,10 @@ buildscript {
     dependencies {
         classpath "com.android.tools.build:gradle:$gradlePluginVersion"
         classpath "org.jetbrains.kotlin:kotlin-gradle-plugin:$kotlinVersion"
+        classpath "org.jetbrains.kotlin:kotlin-serialization:$kotlinVersion"
         classpath "androidx.navigation:navigation-safe-args-gradle-plugin:$navigationVersion"
         classpath "com.google.gms:google-services:$googleServicesVersion"
+
 
         // NOTE: Do not place your application dependencies here; they belong
         // in the individual module build.gradle files
@@ -68,13 +70,17 @@ ext {
     koinVersion = '3.1.4'
     materialVersion = '1.4.0'
     mockitoVersion = '3.4.6'
+    moshiVersion = '1.9.3'
     playServicesLocationVersion = '18.0.0'
     playServicesMapsVersion = '18.0.0'
     recyclerViewVersion = '1.3.0-alpha01'
+    retrofitVersion = '2.9.0'
     robolectricVersion = '4.7.2'
     roomVersion = '2.4.0'
     workVersion = '2.7.1'
+    serializationVersion = '1.3.1'
     timberVersion = '5.0.1'
     truthVersion = '0.44'
     uiAutomatorVersion = '2.2.0'
 }
+
