--- a/code/app/src/main/AndroidManifest.xml
+++ b/code/app/src/main/AndroidManifest.xml
@@ -17,6 +17,12 @@
     <uses-permission android:name="android.permission.INTERNET" />
     <uses-permission android:name="android.permission.WAKE_LOCK" />
 
+    <!-- note: adding network security config to instruct the android firewall to pass through
+         traffic from/to 10.0.2.2 (= localhost on the host running the emulator). This is needed
+         to work with the fake backend, which is used during development.
+         https://stackoverflow.com/questions/6760585/accessing-localhostport-from-android-emulator/56769746#56769746
+         TODO: This can/should be removed in production.
+     -->
     <application
         android:name=".SmobApp"
         android:allowBackup="false"
@@ -24,7 +30,8 @@
         android:label="@string/app_name"
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
-        android:theme="@style/AppTheme">
+        android:theme="@style/AppTheme"
+        android:networkSecurityConfig="@xml/network_security_config">
 
         <!--
              The API key for Google Maps-based APIs is defined as a string resource.
