--- a/code/app/build.gradle
+++ b/code/app/build.gradle
@@ -104,6 +104,7 @@ dependencies {
     implementation "com.squareup.retrofit2:converter-scalars:$retrofitVersion"
     implementation "com.squareup.moshi:moshi:$moshiVersion"
     implementation "com.squareup.moshi:moshi-kotlin:$moshiVersion"
+    implementation "com.squareup.okhttp3:logging-interceptor:$retrofitLoggingVersion"
 
     // workManager
     implementation "androidx.work:work-runtime-ktx:$workVersion"
