--- a/code/build.gradle
+++ b/code/build.gradle
@@ -75,6 +75,7 @@ ext {
     playServicesMapsVersion = '18.0.0'
     recyclerViewVersion = '1.3.0-alpha01'
     retrofitVersion = '2.9.0'
+    retrofitLoggingVersion = '5.0.0-alpha.3'
     robolectricVersion = '4.7.2'
     roomVersion = '2.4.0'
     workVersion = '2.7.1'
