--- a/code/app/src/main/AndroidManifest.xml
+++ b/code/app/src/main/AndroidManifest.xml
@@ -58,7 +58,7 @@
 
         <activity
             android:exported="true"
-            android:name=".authentication.AuthenticationActivity">
+            android:name=".smob.activities.authentication.AuthenticationActivity">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
                 <category android:name="android.intent.category.LAUNCHER" />
@@ -67,12 +67,12 @@
 
         <activity
             android:exported="true"
-            android:name=".smob.SmobActivity" >
+            android:name=".smob.activities.planning.SmobActivity" >
         </activity>
 
         <activity
             android:exported="true"
-            android:name=".smob.SmobItemDescriptionActivity">
+            android:name=".smob.activities.shopping.SmobItemDescriptionActivity">
         </activity>
 
         <!-- WorkManager >= 2.6 needs to remove the androidx-startup code / the WorkManager
