Refactoring: activity/fragment navigation (details screen) - intents & communication of data via Bundles and ViewModels

--- a/code/app/src/main/AndroidManifest.xml
+++ b/code/app/src/main/AndroidManifest.xml
@@ -82,7 +82,7 @@
 
         <activity
             android:exported="true"
-            android:name=".smob.activities.shopping.SmobListItemDescriptionActivity">
+            android:name=".smob.activities.details.SmobDetailsActivity">
         </activity>
 
         <!-- WorkManager >= 2.6 needs to remove the androidx-startup code / the WorkManager
