--- a/code/app/src/main/AndroidManifest.xml
+++ b/code/app/src/main/AndroidManifest.xml
@@ -67,7 +67,11 @@
 
         <activity
             android:exported="true"
-            android:name=".smob.activities.planning.SmobPlanningActivity" >
+            android:name=".smob.activities.planning.SmobPlanningActivity">
+            <nav-graph android:value="@navigation/nav_graph_planning" />
+            <meta-data
+                android:name="android.app.shortcuts"
+                android:resource="@xml/shortcuts" />
         </activity>
 
         <activity
