--- a/code/app/build.gradle
+++ b/code/app/build.gradle
@@ -106,6 +106,9 @@ dependencies {
     implementation "com.squareup.moshi:moshi-kotlin:$moshiVersion"
     implementation "com.squareup.okhttp3:logging-interceptor:$retrofitLoggingVersion"
 
+    // loading an image from URL for display in ImageView
+    implementation "io.coil-kt:coil:$coilVersion"
+
     // workManager
     implementation "androidx.work:work-runtime-ktx:$workVersion"
 
