--- a/backend/package.json
+++ b/backend/package.json
@@ -9,6 +9,8 @@
   "author": "fw",
   "license": "ISC",
   "dependencies": {
+    "axios": "^0.24.0",
+    "express": "^4.17.2",
     "faker": "^5.5.3"
   }
 }
