--- a/backend/package.json
+++ b/backend/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "axios": "^0.24.0",
     "express": "^4.17.2",
-    "faker": "^5.5.3"
+    "faker": "^5.5.3",
+    "json-server": "^0.17.0"
   }
 }
