--- a/code/app/build.gradle
+++ b/code/app/build.gradle
@@ -26,10 +26,10 @@ android {
         // that the app's state is completely cleared between tests.
         testInstrumentationRunnerArguments.clearPackageData = "true"
         
-        // read API key from environment variable "SMOD_NET_API_KEY"
+        // read API key from environment variable "SMOB_NET_API_KEY"
         // ... see: https://medium.com/@alexzaitsev/how-to-move-password-to-system-environment-variables-and-load-it-with-gradle-837bc18e6c8f
-        def smodNetApiKey = System.getenv("SMOD_NET_API_KEY")
-        buildConfigField("String", "SMOD_NET_API_KEY", "\"${smodNetApiKey}\"")
+        def smobNetApiKey = System.getenv("SMOB_NET_API_KEY")
+        buildConfigField("String", "SMOB_NET_API_KEY", "\"${smobNetApiKey}\"")
 
         // network base URL
         // ... fake backend (emulator maps this to localhost@host)
@@ -144,8 +144,8 @@ dependencies {
     // Room dependencies
     implementation "androidx.room:room-ktx:$roomVersion"
     implementation "androidx.room:room-runtime:$roomVersion"
-    implementation 'com.google.firebase:firebase-auth-ktx:21.0.1'
-    kapt "androidx.room:room-compiler:$roomVersion"
+    implementation 'com.google.firebase:firebase-auth-ktx:21.0.3'
+    kapt "androidx.room:room-compiler:2.4.2"
 
     // Coroutines Dependencies
     implementation "org.jetbrains.kotlinx:kotlinx-coroutines-android:$coroutinesVersion"
