--- a/code/app/build.gradle
+++ b/code/app/build.gradle
@@ -11,15 +11,17 @@ android {
     compileSdkVersion rootProject.compileSdkVersion
 
     defaultConfig {
+        testInstrumentationRunnerArguments
+        testInstrumentationRunnerArguments
         applicationId "com.tanfra.shopmob"
         minSdkVersion rootProject.minSdkVersion
         targetSdkVersion rootProject.targetSdkVersion
         versionCode 1
         versionName "1.0"
         testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"
+        resConfigs 'en'
 
         // FirebaseUI includes language support for all languages --> limit to English
-        resConfigs "en"
 
         // The following argument makes the Android Test Orchestrator run its
         // "pm clear" command after each test invocation. This command ensures
@@ -64,15 +66,17 @@ android {
     buildFeatures {
         dataBinding true
     }
+    packagingOptions {
+        jniLibs {
+            excludes += ['META-INF/licenses/**']
+        }
+        resources {
+            excludes += ['**/attach_hotspot_windows.dll', 'META-INF/licenses/**', 'META-INF/AL2.0', 'META-INF/LGPL2.1']
+        }
+    }
 
     // workaround to avoid build errors when running fragment-test dependent tests
     // https://www.codegrepper.com/code-examples/java/More+than+one+file+was+found+with+OS+independent+path+%27META-INF%2FAL2.0%27.+when+running+android+test
-    packagingOptions {
-        exclude "**/attach_hotspot_windows.dll"
-        exclude "META-INF/licenses/**"
-        exclude "META-INF/AL2.0"
-        exclude "META-INF/LGPL2.1"
-    }
 
 }
 
