--- a/code/app/build.gradle
+++ b/code/app/build.gradle
@@ -97,6 +97,7 @@ dependencies {
     implementation platform("com.google.firebase:firebase-bom:$firebaseBomVersion")
     implementation "com.google.firebase:firebase-common-ktx"
     implementation "com.google.firebase:firebase-storage-ktx"
+    implementation "com.google.firebase:firebase-messaging-ktx"
     implementation "com.google.firebase:firebase-analytics-ktx"
 
     // use open source library firebaseui to simplify auth flows
