--- a/code/app/src/main/AndroidManifest.xml
+++ b/code/app/src/main/AndroidManifest.xml
@@ -31,12 +31,15 @@
     <application
         android:name=".SmobApp"
         android:allowBackup="false"
-        android:icon="@mipmap/ic_launcher"
+        android:icon="@drawable/shopping_icon"
         android:label="@string/app_name"
-        android:roundIcon="@mipmap/ic_launcher_round"
+        android:roundIcon="@drawable/shopping_icon"
         android:supportsRtl="true"
         android:theme="@style/AppTheme"
-        android:networkSecurityConfig="@xml/network_security_config">
+        android:networkSecurityConfig="@xml/network_security_config"
+        android:dataExtractionRules="@xml/data_extraction_rules"
+        tools:targetApi="s"
+        tools:ignore="DataExtractionRules">
 
         <!--
              The API key for Google Maps-based APIs is defined as a string resource.
@@ -120,6 +123,36 @@
                 android:value="androidx.startup"
                 tools:node="remove" />
         </provider>
+
+        <!-- start FCM service for the reception of broadcast messages -->
+        <receiver
+            android:name=".smob.fcm.FcmUpdateReceiver"
+            android:enabled="true"
+            android:exported="false">
+        </receiver>
+
+        <!-- start FCM service for sending messages (to selected topic) -->
+        <service
+            android:name=".smob.fcm.SmobFireBaseMessagingService"
+            android:exported="false">
+            <intent-filter>
+                <action android:name="com.google.firebase.MESSAGING_EVENT"/>
+            </intent-filter>
+        </service>
+
+        <!-- [START fcm_default_icon] -->
+        <meta-data
+            android:name="com.google.firebase.messaging.default_notification_icon"
+            android:resource="@drawable/shopping_icon"/>
+        <meta-data
+            android:name="com.google.firebase.messaging.default_notification_color"
+            android:resource="@color/colorAccent"/> <!-- [END fcm_default_icon] -->
+
+        <!-- [START fcm_default_channel] -->
+        <meta-data
+            android:name="com.google.firebase.messaging.default_notification_channel_id"
+            android:value="@string/smob_update_notification_channel_id" />
+        <!-- [END fcm_default_channel] -->
 
     </application>
 
