--- a/backend/package.json
+++ b/backend/package.json
@@ -12,6 +12,8 @@
     "axios": "^0.24.0",
     "express": "^4.17.2",
     "faker": "^5.5.3",
+    "firebase": "^9.6.11",
+    "firebase-admin": "^10.0.2",
     "json-server": "^0.17.0"
   }
 }
