--- a/code/app/build.gradle
+++ b/code/app/build.gradle
@@ -15,6 +15,8 @@ android {
         testInstrumentationRunnerArguments
         testInstrumentationRunnerArguments
         testInstrumentationRunnerArguments
+        testInstrumentationRunnerArguments
+        testInstrumentationRunnerArguments
         applicationId "com.tanfra.shopmob"
         minSdkVersion rootProject.minSdkVersion
         targetSdkVersion rootProject.targetSdkVersion
