Access to contacts stored on device & RV display

--- a/code/app/src/main/AndroidManifest.xml
+++ b/code/app/src/main/AndroidManifest.xml
@@ -18,7 +18,8 @@
     <uses-permission android:name="android.permission.WAKE_LOCK" />
     <uses-permission android:name="android.permission.VIBRATE"/>
 
-
+    <!-- permit the fetching of user's contacts -->
+    <uses-permission android:name="android.permission.READ_CONTACTS" />
 
     <!-- note: adding network security config to instruct the android firewall to pass through
          traffic from/to 10.0.2.2 (= localhost on the host running the emulator). This is needed
