Comments fixed (fb login)

--- a/code/app/src/main/AndroidManifest.xml
+++ b/code/app/src/main/AndroidManifest.xml
@@ -46,6 +46,8 @@
 
         <!-- facebook login
              note: SMOB_FB_CLIENT_TOKEN is read from (system) env variable - see build.gradle (:app)
+                   assumes the presence of an environment variable SMOB_FB_CLIENT_TOKEN on the build
+                   machine... see https://developers.facebook.com/apps/ -> settings -> advanced
         -->
         <meta-data android:name="com.facebook.sdk.ApplicationId" android:value="@string/facebook_application_id" />
         <meta-data android:name="com.facebook.sdk.ClientToken" android:value="${SMOB_FB_CLIENT_TOKEN}"/>
