--- a/code/app/build.gradle
+++ b/code/app/build.gradle
@@ -115,7 +115,7 @@ dependencies {
 
     // Required only if Facebook login support is required
     // Find the latest Facebook SDK releases here: https://goo.gl/Ce5L94
-    implementation "com.facebook.android:facebook-login:latest.release"
+    implementation 'com.facebook.android:facebook-login:14.1.1'
 
     // retrofit & moshi
     implementation "com.squareup.retrofit2:retrofit:$retrofitVersion"
