--- a/code/build.gradle
+++ b/code/build.gradle
@@ -58,29 +58,29 @@ ext {
     archTestingVersion = '2.1.0'
     cardVersion = '1.0.0'
     constraintVersion = '2.1.4'
-    coilVersion = '2.0.0-rc02'
-    coroutinesVersion = '1.6.0-native-mt'
-    dexMakerVersion = '2.28.1'
+    coilVersion = '2.2.0'
+    coroutinesVersion = '1.6.4'
+    dexMakerVersion = '2.28.3'
     espressoVersion = '3.4.0'
-    firebaseBomVersion = '29.3.0'
+    firebaseBomVersion = '30.3.2'
     firebaseUiVersion = '8.0.1'
     fragmentVersion = '1.5.2'
-    gsonVersion = '2.9.0'
+    gsonVersion = '2.9.1'
     hamcrestVersion = '1.3'
     junitVersion = '4.13.2'
-    koinVersion = '3.1.4'
+    koinVersion = '3.2.0'
     materialVersion = '1.6.1'
-    mockitoVersion = '4.4.0'
+    mockitoVersion = '4.7.0'
     moshiVersion = '1.13.0'
-    playServicesLocationVersion = '19.0.1'
-    playServicesMapsVersion = '18.0.2'
+    playServicesLocationVersion = '20.0.0'
+    playServicesMapsVersion = '18.1.0'
     recyclerViewVersion = '1.3.0-beta02'
     retrofitVersion = '2.9.0'
     retrofitLoggingVersion = '5.0.0-alpha.6'
-    robolectricVersion = '4.7.2'
+    robolectricVersion = '4.8.2'
     roomVersion = '2.4.3'
     workVersion = '2.7.1'
-    serializationVersion = '1.3.2'
+    serializationVersion = '1.4.0'
     timberVersion = '5.0.1'
     truthVersion = '1.1.3'
     uiAutomatorVersion = '2.2.0'
