--- a/code/app/src/main/AndroidManifest.xml
+++ b/code/app/src/main/AndroidManifest.xml
@@ -105,6 +105,7 @@
         <activity
             android:exported="true"
             android:name=".smob.ui.admin.SmobAdminActivity" >
+            <nav-graph android:value="@navigation/nav_graph_admin" />
         </activity>
 
         <!-- prevent config changes from restarting the activity - needed, as we get here
@@ -166,8 +167,5 @@
         <!-- [END fcm_default_channel] -->
 
     </application>
-
-
-    <uses-permission android:name="com.google.android.gms.permission.AD_ID" tools:node="remove"/>
 
 </manifest>
