--- a/code/app/build.gradle
+++ b/code/app/build.gradle
@@ -1,6 +1,6 @@
 plugins {
     id 'com.android.application'
-    id 'kotlin-android'
+    id 'org.jetbrains.kotlin.android'
     id 'kotlin-kapt'
     id 'androidx.navigation.safeargs.kotlin'  // .kotlin --> KTX: nav.action accepts param. ("it")
     id 'com.google.gms.google-services'
@@ -8,36 +8,31 @@ plugins {
 }
 
 android {
-    compileSdkVersion rootProject.compileSdkVersion
+    compileSdkVersion 33
 
     defaultConfig {
-        testInstrumentationRunnerArguments
-        testInstrumentationRunnerArguments
-        testInstrumentationRunnerArguments
-        testInstrumentationRunnerArguments
-        testInstrumentationRunnerArguments
-        testInstrumentationRunnerArguments
         applicationId "com.tanfra.shopmob"
-        minSdkVersion rootProject.minSdkVersion
-        targetSdkVersion rootProject.targetSdkVersion
+        minSdk 25
+        targetSdk 33
         versionCode 1
-        versionName "1.0"
-        testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"
-        resConfigs 'en'
+        versionName "1.2"
 
         // FirebaseUI includes language support for all languages --> limit to English
+        resConfigs 'en'
+
+        testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"
 
         // The following argument makes the Android Test Orchestrator run its
         // "pm clear" command after each test invocation. This command ensures
         // that the app's state is completely cleared between tests.
         testInstrumentationRunnerArguments.clearPackageData = "true"
-        
+
         // read API key from environment variable "SMOB_NET_API_KEY"
         // ... see: https://medium.com/@alexzaitsev/how-to-move-password-to-system-environment-variables-and-load-it-with-gradle-837bc18e6c8f
         def smobNetApiKey = System.getenv("SMOB_NET_API_KEY")
         buildConfigField("String", "SMOB_NET_API_KEY", "\"${smobNetApiKey}\"")
 
-        // Facebook login: read SMOB_FB_CLIENT_TOKEN key from .env file
+        // Facebook login: read SMOB_FB_CLIENT_TOKEN key from ENV variable
         // ... see: https://github.com/luggit/react-native-config/issues/21
         //          --> adapted from answer given by 'prtkkmrsngh' (commented on 2 May 2017)
         manifestPlaceholders = [ SMOB_FB_CLIENT_TOKEN:System.getenv("SMOB_FB_CLIENT_TOKEN") ]
@@ -49,32 +44,36 @@ android {
         //buildConfigField "String", "BASE_URL", "\"https://jp8rx9tjtg.execute-api.eu-central-1.amazonaws.com/dev/\""
     }
 
-    testOptions {
-        execution = "ANDROIDX_TEST_ORCHESTRATOR"
-    }
-
     buildTypes {
         release {
             minifyEnabled false
             proguardFiles getDefaultProguardFile('proguard-android-optimize.txt'), 'proguard-rules.pro'
         }
     }
-    kotlinOptions {
-        jvmTarget = '11'
-    }
     compileOptions {
         sourceCompatibility JavaVersion.VERSION_11
         targetCompatibility JavaVersion.VERSION_11
     }
+    kotlinOptions {
+        jvmTarget = '11'
+    }
+
+    buildFeatures {
+        dataBinding true
+    }
+
+
+    testOptions {
+        execution = "ANDROIDX_TEST_ORCHESTRATOR"
+    }
+
     testOptions.unitTests {
         includeAndroidResources = true
         returnDefaultValues = true
     }
 
-    // Enables data binding.
-    buildFeatures {
-        dataBinding true
-    }
+    // workaround to avoid build errors when running fragment-test dependent tests
+    // https://www.codegrepper.com/code-examples/java/More+than+one+file+was+found+with+OS+independent+path+%27META-INF%2FAL2.0%27.+when+running+android+test
     packagingOptions {
         jniLibs {
             excludes += ['META-INF/licenses/**']
@@ -83,153 +82,151 @@ android {
             excludes += ['**/attach_hotspot_windows.dll', 'META-INF/licenses/**', 'META-INF/AL2.0', 'META-INF/LGPL2.1']
         }
     }
-    namespace 'com.tanfra.shopmob'
 
-    // workaround to avoid build errors when running fragment-test dependent tests
-    // https://www.codegrepper.com/code-examples/java/More+than+one+file+was+found+with+OS+independent+path+%27META-INF%2FAL2.0%27.+when+running+android+test
+    namespace 'com.tanfra.shopmob'
 
 }
 
 dependencies {
-    implementation fileTree(dir: 'libs', include: ['*.jar'])
 
-    implementation "org.jetbrains.kotlin:kotlin-reflect:$kotlinVersion"
+    implementation "org.jetbrains.kotlin:kotlin-reflect:1.7.10"
 
     // serialization using kotlinx-serialization (avoids reflection [parcelize] and works with the
     // gradle "serialization" plugin (see above) --> does the "introspection" at compile time to
     // add possibly needed serializer code (for complex data structures)
-    implementation "org.jetbrains.kotlinx:kotlinx-serialization-json:$serializationVersion"
+    implementation "org.jetbrains.kotlinx:kotlinx-serialization-json:1.4.0"
 
     // https://console.firebase.google.com/project/shopmob-335809/overview
     //
     // https://firebase.google.com/docs/android/setup
     // ... when using the BoM, you don't specify versions in the associated library dependencies
-    implementation platform("com.google.firebase:firebase-bom:$firebaseBomVersion")
+    implementation platform("com.google.firebase:firebase-bom:30.5.0")
     implementation "com.google.firebase:firebase-common-ktx"
     implementation "com.google.firebase:firebase-storage-ktx"
     implementation "com.google.firebase:firebase-messaging-ktx"
     implementation "com.google.firebase:firebase-analytics-ktx"
 
-    // use open source library firebaseui to simplify auth flows
-    implementation "com.firebaseui:firebase-ui-auth:$firebaseUiVersion"
+    // use open source library firebase-ui to simplify auth flows
+    implementation "com.firebaseui:firebase-ui-auth:8.0.1"
 
     // Required only if Facebook login support is required
     // Find the latest Facebook SDK releases here: https://goo.gl/Ce5L94
-    implementation 'com.facebook.android:facebook-login:14.1.1'
+    implementation "com.facebook.android:facebook-login:14.1.1"
 
     // retrofit & moshi
-    implementation "com.squareup.retrofit2:retrofit:$retrofitVersion"
-    implementation "com.squareup.retrofit2:converter-moshi:$retrofitVersion"
-    implementation "com.squareup.retrofit2:converter-scalars:$retrofitVersion"
-    implementation "com.squareup.moshi:moshi:$moshiVersion"
-    implementation "com.squareup.moshi:moshi-kotlin:$moshiVersion"
-    implementation "com.squareup.okhttp3:logging-interceptor:$retrofitLoggingVersion"
+    implementation "com.squareup.retrofit2:retrofit:2.9.0"
+    implementation "com.squareup.retrofit2:converter-moshi:2.9.0"
+    implementation "com.squareup.retrofit2:converter-scalars:2.9.0"
+    implementation "com.squareup.moshi:moshi:1.13.0"
+    implementation "com.squareup.moshi:moshi-kotlin:1.13.0"
+    implementation "com.squareup.okhttp3:logging-interceptor:5.0.0-alpha.6"
 
     // loading an image from URL for display in ImageView
-    implementation "io.coil-kt:coil:$coilVersion"
+    implementation "io.coil-kt:coil:2.2.0"
 
     // workManager
-    implementation "androidx.work:work-runtime-ktx:$workVersion"
+    implementation "androidx.work:work-runtime-ktx:2.7.1"
 
     // App dependencies
-    implementation "androidx.appcompat:appcompat:$appCompatVersion"
-    implementation "androidx.legacy:legacy-support-v4:$androidXLegacySupport"
-    implementation "androidx.annotation:annotation:$androidXAnnotations"
+    implementation "androidx.appcompat:appcompat:1.5.1"
+    implementation "androidx.legacy:legacy-support-v4:1.0.0"
+    implementation "androidx.annotation:annotation:1.4.0"
 
-    implementation "androidx.cardview:cardview:$cardVersion"
-    implementation "com.google.android.material:material:$materialVersion"
-    implementation "androidx.recyclerview:recyclerview:$recyclerViewVersion"
-    implementation "androidx.constraintlayout:constraintlayout:$constraintVersion"
+    implementation "androidx.cardview:cardview:1.0.0"
+    implementation "com.google.android.material:material:1.6.1"
+    implementation "androidx.recyclerview:recyclerview:1.3.0-beta02"
+    implementation "androidx.constraintlayout:constraintlayout:2.1.4"
 
-    implementation "com.google.code.gson:gson:$gsonVersion"
+    implementation "com.google.code.gson:gson:2.9.1"
 
-    implementation "androidx.fragment:fragment-ktx:$fragmentVersion"
-    implementation "androidx.activity:activity-ktx:$activityVersion"
+    implementation "androidx.fragment:fragment-ktx:1.5.2"
+    implementation "androidx.activity:activity-ktx:1.5.1"
 
 
     // Architecture Components
     // Navigation dependencies
-    implementation "androidx.appcompat:appcompat:$appCompatVersion"
-    implementation "androidx.constraintlayout:constraintlayout:$constraintVersion"
-    implementation "androidx.lifecycle:lifecycle-common-java8:$archLifecycleVersion"
-    //kapt "androidx.lifecycle:lifecycle-compiler:$archLifecycleVersion"
-    implementation "androidx.lifecycle:lifecycle-extensions:$archLifecycleOldVersion"
-    implementation "androidx.lifecycle:lifecycle-viewmodel-ktx:$archLifecycleVersion"
-    implementation "androidx.lifecycle:lifecycle-livedata-ktx:$archLifecycleVersion"
-    implementation "androidx.navigation:navigation-fragment-ktx:$navigationVersion"
-    implementation "androidx.navigation:navigation-ui-ktx:$navigationVersion"
-    implementation "androidx.test.espresso:espresso-idling-resource:$espressoVersion"
+    implementation "androidx.appcompat:appcompat:1.5.1"
+    implementation "androidx.constraintlayout:constraintlayout:2.1.4"
+    implementation "androidx.lifecycle:lifecycle-common-java8:2.5.1"
+    //kapt "androidx.lifecycle:lifecycle-compiler:2.5.1"
+    implementation "androidx.lifecycle:lifecycle-extensions:2.2.0"
+    implementation "androidx.lifecycle:lifecycle-viewmodel-ktx:2.5.1"
+    implementation "androidx.lifecycle:lifecycle-livedata-ktx:2.5.1"
+    implementation "androidx.navigation:navigation-fragment-ktx:2.5.2"
+    implementation "androidx.navigation:navigation-ui-ktx:2.5.2"
+    implementation "androidx.test.espresso:espresso-idling-resource:3.4.0"
 
     // Room dependencies
-    implementation "androidx.room:room-ktx:$roomVersion"
-    implementation "androidx.room:room-runtime:$roomVersion"
-    implementation 'com.google.firebase:firebase-auth-ktx:21.0.7'
+    implementation "androidx.room:room-ktx:2.4.3"
+    implementation "androidx.room:room-runtime:2.4.3"
+    implementation "com.google.firebase:firebase-auth-ktx:21.0.8"
     kapt "androidx.room:room-compiler:2.4.3"
 
     // Coroutines Dependencies
-    implementation "org.jetbrains.kotlinx:kotlinx-coroutines-android:$coroutinesVersion"
+    implementation "org.jetbrains.kotlinx:kotlinx-coroutines-android:1.6.4"
 
     // Koin
-    implementation "io.insert-koin:koin-core:$koinVersion"
-    implementation "io.insert-koin:koin-android:$koinVersion"
+    implementation "io.insert-koin:koin-core:3.2.0"
+    implementation "io.insert-koin:koin-android:3.2.0"
 
     //Maps & Geofencing
-    implementation "com.google.android.gms:play-services-location:$playServicesLocationVersion"
-    implementation "com.google.android.gms:play-services-maps:$playServicesMapsVersion"
+    implementation "com.google.android.gms:play-services-location:20.0.0"
+    implementation "com.google.android.gms:play-services-maps:18.1.0"
 
     // Timber (logging)
-    implementation "com.jakewharton.timber:timber:$timberVersion"
+    implementation "com.jakewharton.timber:timber:5.0.1"
 
 
     // Dependencies for local unit tests
-    testImplementation "junit:junit:$junitVersion"
-    testImplementation "org.hamcrest:hamcrest-all:$hamcrestVersion"
-    testImplementation "androidx.arch.core:core-testing:$archTestingVersion"    // liveData testing
-    testImplementation "org.jetbrains.kotlinx:kotlinx-coroutines-android:$coroutinesVersion"
-    testImplementation "org.jetbrains.kotlinx:kotlinx-coroutines-test:$coroutinesVersion"
-    testImplementation "org.robolectric:robolectric:$robolectricVersion"
-    testImplementation "com.google.truth:truth:$truthVersion"
-    testImplementation "org.mockito:mockito-core:$mockitoVersion"
-    testImplementation "io.insert-koin:koin-test:$koinVersion"
-    testImplementation "io.insert-koin:koin-test-junit4:$koinVersion"
+    testImplementation "junit:junit:4.13.2"
+    testImplementation "org.hamcrest:hamcrest-all:1.3"
+    testImplementation "androidx.arch.core:core-testing:2.1.0"    // liveData testing
+    testImplementation "org.jetbrains.kotlinx:kotlinx-coroutines-android:1.6.4"
+    testImplementation "org.jetbrains.kotlinx:kotlinx-coroutines-test:1.6.4"
+    testImplementation "org.robolectric:robolectric:4.8.2"
+    testImplementation "com.google.truth:truth:1.1.3"
+    testImplementation "org.mockito:mockito-core:4.7.0"
+    testImplementation "io.insert-koin:koin-test:3.2.0"
+    testImplementation "io.insert-koin:koin-test-junit4:3.2.0"
 
     // Test Orchestration
-    androidTestImplementation('androidx.test:runner:1.4.0')
-    androidTestUtil('androidx.test:orchestrator:1.4.1')
-    androidTestImplementation('androidx.test.espresso:espresso-intents:3.4.0')
+    androidTestImplementation("androidx.test:runner:1.4.0")
+    androidTestUtil("androidx.test:orchestrator:1.4.1")
+    androidTestImplementation("androidx.test.espresso:espresso-intents:3.4.0")
 
     // uiAutomator Testing
-    androidTestImplementation "androidx.test.uiautomator:uiautomator:$uiAutomatorVersion"
+    androidTestImplementation "androidx.test.uiautomator:uiautomator:2.2.0"
 
     // AndroidX Test - JVM testing
-    testImplementation "androidx.test:core-ktx:$androidXTestCoreVersion"
-    testImplementation "androidx.test.ext:junit-ktx:$androidXTestExtKotlinRunnerVersion"
-    testImplementation "androidx.test:rules:$androidXTestRulesVersion"
+    testImplementation "androidx.test:core-ktx:1.4.0"
+    testImplementation "androidx.test.ext:junit-ktx:1.1.3"
+    testImplementation "androidx.test:rules:1.4.0"
 
 
     // AndroidX Test - Instrumented testing
-    androidTestImplementation "androidx.test:core-ktx:$androidXTestCoreVersion"
-    androidTestImplementation "androidx.test.ext:junit-ktx:$androidXTestExtKotlinRunnerVersion"
-    androidTestImplementation "org.jetbrains.kotlinx:kotlinx-coroutines-test:$coroutinesVersion"
-    androidTestImplementation "androidx.test:rules:$androidXTestRulesVersion"
-    androidTestImplementation "androidx.room:room-testing:$roomVersion"
-    androidTestImplementation "androidx.arch.core:core-testing:$archTestingVersion"
-    androidTestImplementation "org.robolectric:annotations:$robolectricVersion"
-    androidTestImplementation "androidx.test.espresso:espresso-core:$espressoVersion"
-    androidTestImplementation "androidx.test.espresso:espresso-contrib:$espressoVersion"
-    androidTestImplementation "androidx.test.espresso:espresso-intents:$espressoVersion"
-    androidTestImplementation "androidx.test.espresso.idling:idling-concurrent:$espressoVersion"
-    androidTestImplementation "junit:junit:$junitVersion"
+    androidTestImplementation "androidx.test:core-ktx:1.4.0"
+    androidTestImplementation "androidx.test.ext:junit-ktx:1.1.3"
+    androidTestImplementation "org.jetbrains.kotlinx:kotlinx-coroutines-test:1.6.4"
+    androidTestImplementation "androidx.test:rules:1.4.0"
+    androidTestImplementation "androidx.room:room-testing:2.4.3"
+    androidTestImplementation "androidx.arch.core:core-testing:2.1.0"
+    androidTestImplementation "org.robolectric:annotations:4.8.2"
+    androidTestImplementation "androidx.test.espresso:espresso-core:3.4.0"
+    androidTestImplementation "androidx.test.espresso:espresso-contrib:3.4.0"
+    androidTestImplementation "androidx.test.espresso:espresso-intents:3.4.0"
+    androidTestImplementation "androidx.test.espresso.idling:idling-concurrent:3.4.0"
+    androidTestImplementation "junit:junit:4.13.2"
 
     // Once https://issuetracker.google.com/127986458 is fixed this can be testImplementation
-    debugImplementation "androidx.fragment:fragment-testing:$fragmentVersion"
-    //implementation "androidx.fragment:fragment-testing:$fragmentVersion"
-    implementation "androidx.test:core:$androidXTestCoreVersion"
-    //implementation "androidx.fragment:fragment-ktx:$fragmentVersion"
+    debugImplementation "androidx.fragment:fragment-testing:1.5.2"
+    //implementation "androidx.fragment:fragment-testing:1.5.2"
+    implementation "androidx.test:core:1.4.0"
+    //implementation "androidx.fragment:fragment-ktx:1.5.2"
 
-    androidTestImplementation("io.insert-koin:koin-test:$koinVersion") { exclude group: 'org.mockito' }
-    androidTestImplementation "io.insert-koin:koin-test-junit4:$koinVersion"
-    androidTestImplementation "org.mockito:mockito-core:$mockitoVersion"
-    androidTestImplementation "com.linkedin.dexmaker:dexmaker-mockito:$dexMakerVersion"
+    androidTestImplementation("io.insert-koin:koin-test:3.2.0") { exclude group: 'org.mockito' }
+    androidTestImplementation "io.insert-koin:koin-test-junit4:3.2.0"
+    androidTestImplementation "org.mockito:mockito-core:4.7.0"
+    androidTestImplementation "com.linkedin.dexmaker:dexmaker-mockito:2.28.3"
 
 }
+
