--- a/code/gradle.properties
+++ b/code/gradle.properties
@@ -18,7 +18,7 @@ android.useAndroidX=true
 # Automatically convert third-party libraries to use AndroidX
 android.enableJetifier=true
 # android.jetifier.ignorelist=bcprov-jdk15on-1.68.jar
-android.jetifier.ignorelist=bcprov-jdk15on-1.68.jar
+#android.jetifier.ignorelist=bcprov-jdk15on-1.68.jar
 # Kotlin code style for this project: "official" or "obsolete":
 kotlin.code.style=official
 # Enables namespacing of each library's R class so that its R class includes only the
