--- a/code/app/build.gradle
+++ b/code/app/build.gradle
@@ -11,14 +11,16 @@ android {
     compileSdkVersion 33
 
     defaultConfig {
+        testInstrumentationRunnerArguments
+        testInstrumentationRunnerArguments
         applicationId "com.tanfra.shopmob"
         minSdk 25
         targetSdk 33
         versionCode 1
         versionName "1.2"
+        resConfigs 'en'
 
         // FirebaseUI includes language support for all languages --> limit to English
-        resConfigs 'en'
 
         testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"
 
@@ -130,17 +132,17 @@ dependencies {
     // App dependencies
     implementation "androidx.appcompat:appcompat:1.5.1"
     implementation "androidx.legacy:legacy-support-v4:1.0.0"
-    implementation "androidx.annotation:annotation:1.4.0"
+    implementation "androidx.annotation:annotation:1.5.0"
 
     implementation "androidx.cardview:cardview:1.0.0"
     implementation "com.google.android.material:material:1.6.1"
-    implementation "androidx.recyclerview:recyclerview:1.3.0-beta02"
+    implementation "androidx.recyclerview:recyclerview:1.3.0-rc01"
     implementation "androidx.constraintlayout:constraintlayout:2.1.4"
 
     implementation "com.google.code.gson:gson:2.9.1"
 
-    implementation "androidx.fragment:fragment-ktx:1.5.2"
-    implementation "androidx.activity:activity-ktx:1.5.1"
+    implementation "androidx.fragment:fragment-ktx:1.5.3"
+    implementation "androidx.activity:activity-ktx:1.6.0"
 
 
     // Architecture Components
@@ -218,7 +220,7 @@ dependencies {
     androidTestImplementation "junit:junit:4.13.2"
 
     // Once https://issuetracker.google.com/127986458 is fixed this can be testImplementation
-    debugImplementation "androidx.fragment:fragment-testing:1.5.2"
+    debugImplementation "androidx.fragment:fragment-testing:1.5.3"
     //implementation "androidx.fragment:fragment-testing:1.5.2"
     implementation "androidx.test:core:1.4.0"
     //implementation "androidx.fragment:fragment-ktx:1.5.2"
