App able to receive FCM messages and (when in the background) sending a notification with the msg body

--- a/code/app/src/main/AndroidManifest.xml
+++ b/code/app/src/main/AndroidManifest.xml
@@ -149,7 +149,7 @@
 
         <!-- start FCM service for the reception of broadcast messages -->
         <receiver
-            android:name=".smob.fcm.FcmUpdateReceiver"
+            android:name=".smob.fcm.FcmBroadcastReceiver"
             android:enabled="true"
             android:exported="false">
         </receiver>
