Upgraded deprecated code sections, removed lint errors

--- a/code/app/src/main/AndroidManifest.xml
+++ b/code/app/src/main/AndroidManifest.xml
@@ -45,6 +45,23 @@
         tools:targetApi="s"
         tools:ignore="DataExtractionRules">
 
+        <!-- WorkManager >= 2.6 needs to remove the androidx-startup code / the WorkManager
+             initialization from androidx-startup to allow for 'on-demand initialization' /
+             work properly, see:
+             https://developer.android.com/topic/libraries/architecture/workmanager/advanced/custom-configuration#on-demand
+         -->
+        <provider
+            android:name="androidx.startup.InitializationProvider"
+            android:authorities="${applicationId}.androidx-startup"
+            android:exported="false"
+            tools:node="merge">
+            <!-- If you are using androidx.startup to initialize other components -->
+            <meta-data
+                android:name="androidx.work.WorkManagerInitializer"
+                android:value="androidx.startup"
+                tools:node="remove" />
+        </provider>
+
         <!-- facebook login
              note: SMOB_FB_CLIENT_TOKEN is read from (system) env variable - see build.gradle (:app)
                    assumes the presence of an environment variable SMOB_FB_CLIENT_TOKEN on the build
@@ -79,10 +96,12 @@
             android:name=".smob.geofence.GeofenceBroadcastReceiver"
             android:enabled="true"
             android:exported="false" />
-        <service
-            android:name=".smob.geofence.GeofenceTransitionsWorkService"
-            android:exported="true"
-            android:permission="android.permission.BIND_JOB_SERVICE" />
+
+        <!-- NO LONGER NEEDED - USING WORKMANAGER TO SCHEDULE GEOFENCE SERVICE -->
+<!--        <service-->
+<!--            android:name=".smob.geofence.GeofenceTransitionsWorkService"-->
+<!--            android:exported="true"-->
+<!--            android:permission="android.permission.BIND_JOB_SERVICE" />-->
 
         <activity
             android:exported="true"
@@ -129,23 +148,6 @@
             android:configChanges="orientation|keyboardHidden|screenSize"
             >
         </activity>
-
-        <!-- WorkManager >= 2.6 needs to remove the androidx-startup code / the WorkManager
-             initialization from androidx-startup to allow for 'on-demand initialization' /
-             work properly, see:
-             https://developer.android.com/topic/libraries/architecture/workmanager/advanced/custom-configuration#on-demand
-         -->
-        <provider
-            android:name="androidx.startup.InitializationProvider"
-            android:authorities="${applicationId}.androidx-startup"
-            android:exported="false"
-            tools:node="merge">
-            <!-- if you are using androidx.startup to initialize other components -->
-            <meta-data
-                android:name="androidx.work.WorkManagerInitializer"
-                android:value="androidx.startup"
-                tools:node="remove" />
-        </provider>
 
         <!-- start FCM service for sending/receiving messages (to/from selected topic) -->
         <service
