--- a/code/app/build.gradle
+++ b/code/app/build.gradle
@@ -98,7 +98,7 @@ dependencies {
     // serialization using kotlinx-serialization (avoids reflection [parcelize] and works with the
     // gradle "serialization" plugin (see above) --> does the "introspection" at compile time to
     // add possibly needed serializer code (for complex data structures)
-    implementation 'org.jetbrains.kotlinx:kotlinx-serialization-json:1.5.0'
+    implementation 'org.jetbrains.kotlinx:kotlinx-serialization-json:1.5.1'
 
     // https://console.firebase.google.com/project/shopmob-335809/overview
     //
@@ -132,12 +132,18 @@ dependencies {
     // Find the latest Facebook SDK releases here: https://goo.gl/Ce5L94
     implementation 'com.facebook.android:facebook-login:16.1.3'
 
-    // retrofit & moshi
-    implementation "com.squareup.retrofit2:retrofit:2.9.0"
-    implementation "com.squareup.retrofit2:converter-moshi:2.9.0"
-    implementation "com.squareup.retrofit2:converter-scalars:2.9.0"
+    // moshi
     implementation 'com.squareup.moshi:moshi:1.15.0'
     implementation 'com.squareup.moshi:moshi-kotlin:1.15.0'
+    ksp "com.squareup.moshi:moshi-kotlin-codegen:1.15.0"
+
+    // KTOR
+    implementation "io.ktor:ktor-client-core:2.3.3"
+    // implementation "io.ktor:ktor-client-cio:2.3.3"
+    implementation "io.ktor:ktor-client-okhttp:2.3.3"
+    implementation "io.ktor:ktor-client-content-negotiation:2.3.3"
+    implementation 'com.hypercubetools:ktor-moshi:3.0.0'
+    //implementation "io.ktor:ktor-client-logging:2.3.3"
     implementation "com.squareup.okhttp3:logging-interceptor:5.0.0-alpha.6"
 
     // loading an image from URL for display in ImageView
